name:                hdump
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hdump#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hdump
                     , Hdump.Json
                     , Hdump.Types
                     , Hdump.Wai
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , wai-extra
                     , warp
                     , http-types
                     , blaze-builder
                     , mtl
                     , text
                     , case-insensitive
                     , bytestring
  default-language:    Haskell2010

executable hdump-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hdump
                     , optparse-applicative
  default-language:    Haskell2010

test-suite hdump-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hdump
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hdump
